# Scavenger

./: Cargo.toml  DEACTIVATE_WASTE_IMPLEMENTATION.md  DEACTIVATE_WASTE_QUICK_REFERENCE.md  DEACTIVATE_WASTE_TASK_SUMMARY.md  GAS_OPTIMIZATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INCENTIVE_EVENT_IMPLEMENTATION.md  INCENTIVE_PR.md  INTEGRATION_TESTS_SUMMARY.md  ISSUE_36_SUMMARY.md  ISSUE_46_IMPLEMENTATION.md  ISSUE_48_IMPLEMENTATION.md  ISSUE_51_IMPLEMENTATION.md  ISSUE_66_REENTRANCY_GUARD_IMPLEMENTATION.md  ISSUE_67_INPUT_VALIDATION_IMPLEMENTATION.md  PARTICIPANT_IMPLEMENTATION_COMPLETE.md  PR_CREATION_INSTRUCTIONS.md  PR_CREATION_STEPS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_TRANSFER.md  PR_DESCRIPTION_WASTE.md  PR_DETAILS.md  RECYCLE_WASTE_IMPLEMENTATION.md  RESET_WASTE_CONFIRMATION_IMPLEMENTATION.md  RESET_WASTE_CONFIRMATION_QUICK_REFERENCE.md  RESET_WASTE_CONFIRMATION_TASK_SUMMARY.md  STELLAR_CONTRACT_TEST_FIXES_NEEDED.md  SUPPLY_CHAIN_TRANSFER_RULES_IMPLEMENTATION.md  TRANSFER_RECORD_IMPLEMENTATION_COMPLETE.md  TRANSFER_WASTE_IMPLEMENTATION.md  WASTE_REGISTRATION_FLOW_TEST_SUMMARY.md
contracts/scavenger/: Cargo.toml
contracts/scavenger/src/: contract.rs  events.rs  lib.rs  test.rs  test_data_structures.rs  test_deactivate_incentive.rs  test_deactivate_waste.rs  test_participant_registration_flow.rs  test_reset_waste_confirmation.rs  test_transfer_validation.rs  test_update_incentive.rs  test_waste_registration_flow.rs  testutils.rs  types.rs
contracts/scavenger/test_snapshots/test/: test_all_role_types.1.json  test_all_waste_types.1.json  test_configuration_persistence.1.json  test_create_incentive.1.json  test_create_incentive_unregistered.1.json  test_create_incentive_wrong_role.1.json  test_distribute_rewards_basic.1.json  test_get_incentive_by_id.1.json  (+26 more)
contracts/waste-management/: Cargo.toml  README.md
contracts/waste-management/src/: lib.rs  test.rs  waste.rs
contracts/waste-transfer/: Cargo.toml  README.md
contracts/waste-transfer/src/: lib.rs  test.rs  transfer.rs
(+181 files in other folders)
