[workspace]
members = ["stellar-contract", "contracts/scavenger"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/scavenger/scavenger"

[workspace.dependencies]
soroban-sdk = "21.7.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
