[package]
name = "scavenger"
description = "Scavenger contract with configuration storage"
edition = "2021"
publish = false
version = "0.1.0"

[workspace]
# This is an independent package, not part of the workspace

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "23.0.3"

[dev-dependencies]
soroban-sdk = { version = "23.0.3", features = ["testutils"] }
