[package]
name = "waste-management"
description = "Waste tracking and recycling management contract"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true 

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
