[package]
name = "waste-transfer"
description = "Track waste transfers in the supply chain"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true 

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
